simulations/programs/3D Phase Space/style.css
/* Base styles */
body {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  background: #f9f9f9;
  color: #222;
  margin: 0;
  padding: 0px;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
#entireBody{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  max-width: 1800px;
  padding-bottom: 100px;
  margin: 0 auto;
  margin-top: 65px;
}

.wrapper {
  max-width: 900px;
  margin: 0 auto;
  text-align: center;
  background: #fff;
  padding-top: 30px;
  padding-right: 30px;
  padding-left: 30px;
  padding-bottom: 0px;
  border-radius: 8px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

input[type="range"] {
  cursor: pointer;
}

h1 {
  font-size: 2em;
  margin-bottom: 10px;
}

h2, h4 {
  margin-top: 20px;
  margin-bottom: 10px;
}

.back-button {
  position: absolute;
  top: 20px;
  left: 20px;
  background-color: black;
  color: white;
  padding: 8px 14px;
  border-radius: 6px;
  text-decoration: none;
  font-weight: bold;
  transition: background-color 0.3s ease;
  z-index: 1000;
}

.back-button:hover {
  background-color: #333;
}


.canvas-container {
  width: 100%;
  padding: 0 2.5vw;    
  box-sizing: border-box;
}

#canvas3d {
  display: block;
  width: 100%;
  max-width: 1800px;
  height: clamp(500px, 75vh, 900px);  /* not full-screen tall */
  margin: 24px auto;
  border-radius: 10px;   
}



#bottomBackBtn {
  margin-top: 100px;
  font-family: Arial, Helvetica, sans-serif;
  background: rgb(45, 55, 114);
  color: white;
  padding: 15px 20px;
  border-radius: 6px;
  font-weight: bold;
  cursor: pointer;
  text-align: center;
  cursor: pointer;
}


#colorCycle{
  margin-bottom: 10px;
  background-color: rgb(61, 58, 185);
  color: white;
  padding: 5px;
  border-radius: 10px;
  cursor: pointer;
  font-family: 'Helvetica', 'Arial', sans-serif;
  font-size: 15px; 
  font-weight: bold;

}



#threeD-container{
  background-color: black;
  color: white;
  padding: 20px;
  border-radius: 8px;
  margin-top: 20px;
  font-family: 'Helvetica', 'Arial', sans-serif;
  font-size: 15px;
}

#system-select-3d{
  font-family: 'Helvetica', 'Arial', sans-serif;
  font-size: 16px;
  font-weight: bold;

}

#equation-display-div{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 20px;
  font-family: 'Helvetica', 'Arial', sans-serif;
  font-size: 20px;
  font-weight: bold;
  padding: 50px;
  border: black 5px solid;
  border-radius: 10px;
}

#equation-title{
  font-size: 27px;
  
}

#mainControl{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 100px;
  width: 100%;
  height: 210px;
  margin-bottom: 20px;
}

#controls{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 30px;
  background-color: black;
  color: white;
  border-radius: 8px;
  padding: 15px;
  flex: 1;
  height: 100%;
}

#palette-select{
  font-family: 'Helvetica', 'Arial', sans-serif;
  font-size: 16px;
  font-weight: bold;
}

label[for="simulation-speed"]{
  margin-left: 30px;
}

#params{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: black;
  color: white;
  padding: 15px;
  border-radius: 8px;
  gap: 8px;
  flex: 1;
  height: 100%;
}

#param-title{
  display: flex;
  flex-direction: row;
  justify-content: row;
  align-items: row;
  margin-bottom: 5px;
}

#resetParams-btn{
  margin-top: 10px;
  background-color: rgb(61, 58, 185);
  color: white;
  padding: 5px;
  border-radius: 10px;
  cursor: pointer;
  font-family: 'Helvetica', 'Arial', sans-serif;
  font-size: 15px; 
  font-weight: bold;
}

#play-reset-row{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 25px;
  margin-top: 5px;
}

#display-row{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 25px;
  margin-top: 5px;
}

#reset-btn{
  background-color: rgb(153, 0, 0);
  color: white;
  padding: 10px 15px;
  border-radius: 8px;
  font-family: 'Helvetica', 'Arial', sans-serif;
  font-size: 15px; 
  margin-top: 20px;
  cursor: pointer;
}

#pause-btn{
  background-color: rgb(17, 21, 71);
  color: white;
  padding: 10px 15px;
  border-radius: 8px;
  font-family: 'Helvetica', 'Arial', sans-serif;
  font-size: 15px; 
  margin-top: 20px;
  cursor: pointer;
}



.gridBtn{
  background-color: rgb(88, 42, 173);
  color: white;
  padding: 10px 15px;
  border-radius: 8px;
  font-family: 'Helvetica', 'Arial', sans-serif;
  font-size: 15px; 
  margin-top: 20px;
  cursor: pointer;
}

#tip{
  background-color: black;
  color: white;
  font-family:Arial, Helvetica, sans-serif;
  font-weight: bold;
  margin-top: 9px;
  border-radius: 5px;
  padding-right: 10px;
  padding-left: 10px;
  padding-top:5px;
  padding-bottom:5px;
}

.spacer {
  height: 100px;
  width: 100%;
}

